--- a/ipynb/18_Filter copy.ipynb
+++ b/ipynb/18_Filter copy.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "99e534d0",
    "metadata": {},
    "outputs": [
@@ -40,8 +40,12 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from pathlib import Path\n",
+    "import numpy as np\n",
     "import shutil  # 파일 복사용\n",
+    "import json\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# -------------------------------------------------------\n",
     "# 경로 설정\n",
@@ -95,11 +99,239 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b3efc8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def plot_skeleton_overlay(FRAME_INDEX: int):\n",
+    "    \"\"\"\n",
+    "    지정한 프레임의 skeleton overlay를 표시 (모든 keypoints 표시, 얼굴 제외)\n",
+    "\n",
+    "    Args:\n",
+    "        FRAME_INDEX (int): 확인할 프레임 번호 (예: 248)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 색상 및 keypoint 그룹 정의\n",
+    "    # -------------------------------------------------------\n",
+    "    COLOR_SK = (50, 50, 50)     # Skeleton = 짙은 회색\n",
+    "    COLOR_L  = (0, 0, 255)      # 왼쪽 keypoints = 파랑 (Matplotlib은 RGB 순서라 반대로)\n",
+    "    COLOR_R  = (255, 0, 0)      # 오른쪽 keypoints = 빨강\n",
+    "    COLOR_NEUTRAL = (0, 255, 0) # 중앙부 keypoints = 초록\n",
+    "\n",
+    "    LEFT_POINTS  = [5,7,9,11,13,15]   # 왼쪽 관절 인덱스\n",
+    "    RIGHT_POINTS = [6,8,10,12,14,16]  # 오른쪽 관절 인덱스\n",
+    "    EXCLUDE_POINTS = [0,1,2,3,4]      # 제외할 keypoints (얼굴 부위)\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # JSON 로드\n",
+    "    # -------------------------------------------------------\n",
+    "    json_path = KEYPOINTS_DIR / f\"{FRAME_INDEX:06d}.json\"\n",
+    "    if not json_path.exists():\n",
+    "        raise FileNotFoundError(f\"❌ JSON 파일 없음: {json_path}\")\n",
+    "    with open(json_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    keypoints = np.array(data[\"instance_info\"][0][\"keypoints\"])  # (17, 2)\n",
+    "    skeleton = np.array(data[\"meta_info\"][\"skeleton_links\"])     # 연결쌍\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 프레임 로드\n",
+    "    # -------------------------------------------------------\n",
+    "    frame_path = FRAME_DIR / f\"{FRAME_INDEX:06d}.jpg\"\n",
+    "    if not frame_path.exists():\n",
+    "        raise FileNotFoundError(f\"❌ 프레임 없음: {frame_path}\")\n",
+    "    frame = cv2.imread(str(frame_path))\n",
+    "    frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # PLOT\n",
+    "    # -------------------------------------------------------\n",
+    "    plt.figure(figsize=(8, 12))\n",
+    "    plt.imshow(frame)\n",
+    "\n",
+    "    # Skeleton 표시\n",
+    "    for (i1, i2) in skeleton:\n",
+    "        if i1 in EXCLUDE_POINTS or i2 in EXCLUDE_POINTS:\n",
+    "            continue\n",
+    "        x1, y1 = keypoints[i1]\n",
+    "        x2, y2 = keypoints[i2]\n",
+    "        plt.plot([x1, x2], [y1, y2], color=np.array(COLOR_SK)/255.0, linewidth=2, alpha=0.8)\n",
+    "\n",
+    "    # Keypoints 표시\n",
+    "    for i, (x, y) in enumerate(keypoints):\n",
+    "        if i in EXCLUDE_POINTS:\n",
+    "            continue\n",
+    "        if i in LEFT_POINTS:\n",
+    "            color = np.array(COLOR_L)/255.0\n",
+    "        elif i in RIGHT_POINTS:\n",
+    "            color = np.array(COLOR_R)/255.0\n",
+    "        else:\n",
+    "            color = np.array(COLOR_NEUTRAL)/255.0\n",
+    "        plt.scatter(x, y, color=color, s=40, edgecolors='black', linewidths=0.5)\n",
+    "        plt.text(x + 5, y - 5, str(i), fontsize=8, color='black')\n",
+    "\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.title(f\"Frame {FRAME_INDEX:06d} Skeleton Overlay\", fontsize=14)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7d3d01a6",
    "metadata": {},
    "source": [
-    "## 선형 보간 함수"
+    "## 선형 보간 함수\n",
+    "단일 보간 원할시  \n",
+    "ex. Frame 5 -> range(5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e9cb4ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def interpolate_json_keypoints(target_kp: int, interp_range: range):\n",
+    "    global KEYPOINTS_DIR  # 상위 스코프에서 제어되는 전역 변수 사용\n",
+    "    print(f\"[INFO] 보간 대상 keypoint: {target_kp}, frame range: {interp_range.start}-{interp_range.stop - 1}\")\n",
+    "    print(f\"[INFO] 대상 폴더: {KEYPOINTS_DIR}\")\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 모든 JSON 파일 로드 및 keypoint 좌표 추출\n",
+    "    # -------------------------------------------------------\n",
+    "    json_files = sorted(KEYPOINTS_DIR.glob(\"*.json\"))                     # 폴더 내 JSON 파일 리스트\n",
+    "    all_kps = []                                                          # 모든 keypoints 저장 리스트\n",
+    "\n",
+    "    for jf in json_files:                                                 # 각 JSON 파일 순회\n",
+    "        with open(jf, \"r\") as f:                                          # JSON 열기\n",
+    "            data = json.load(f)                                           # JSON 파싱\n",
+    "        kp = data[\"instance_info\"][0][\"keypoints\"]                        # 첫 번째 인스턴스의 keypoints\n",
+    "        all_kps.append(kp)                                                # 리스트에 추가\n",
+    "\n",
+    "    all_kps = np.array(all_kps)                                           # numpy 배열로 변환 (shape: [frame, 17, 2])\n",
+    "    print(f\"[INFO] keypoints shape: {all_kps.shape}\")\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 보간 대상 프레임 제외한 선형 보간 수행\n",
+    "    # -------------------------------------------------------\n",
+    "    frames = np.arange(len(all_kps))                                      # 전체 프레임 인덱스\n",
+    "    x_vals = all_kps[:, target_kp, 0]                                     # X 좌표\n",
+    "    y_vals = all_kps[:, target_kp, 1]                                     # Y 좌표\n",
+    "\n",
+    "    valid_mask = np.ones_like(frames, dtype=bool)                         # 전체 True 마스크 생성\n",
+    "    valid_mask[interp_range.start:interp_range.stop] = False              # 보간 대상 구간만 False 처리\n",
+    "\n",
+    "    interp_x = np.interp(frames, frames[valid_mask], x_vals[valid_mask])  # X좌표 선형 보간\n",
+    "    interp_y = np.interp(frames, frames[valid_mask], y_vals[valid_mask])  # Y좌표 선형 보간\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 보간 결과를 기존 JSON에 덮어쓰기\n",
+    "    # -------------------------------------------------------\n",
+    "    for i, jf in enumerate(json_files):                                   # 각 프레임 순회\n",
+    "        if interp_range.start <= i <= interp_range.stop - 1:              # 보간 대상 프레임만 수정\n",
+    "            with open(jf, \"r\") as f:                                      # JSON 읽기\n",
+    "                data = json.load(f)                                       # JSON 파싱\n",
+    "\n",
+    "            # keypoint 좌표를 보간값으로 교체\n",
+    "            data[\"instance_info\"][0][\"keypoints\"][target_kp][0] = float(interp_x[i])  # X 보간값\n",
+    "            data[\"instance_info\"][0][\"keypoints\"][target_kp][1] = float(interp_y[i])  # Y 보간값\n",
+    "\n",
+    "            # 덮어쓰기 저장 (원본 JSON 업데이트)\n",
+    "            with open(jf, \"w\") as f:\n",
+    "                json.dump(data, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    print(f\"\\n✅ Frame {interp_range.start}~{interp_range.stop - 1} 구간 보간 완료 및 JSON 덮어쓰기 완료.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dedb28d",
+   "metadata": {},
+   "source": [
+    "## Keypoints 고정 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52cba136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def freeze_keypoint(KEYPOINTS_DIR: Path, OUTPUT_PATH: Path, target_kps, ref_frame: int):\n",
+    "    \"\"\"\n",
+    "    여러 keypoint를 기준 프레임(ref_frame)의 좌표로 전체 프레임에 고정.\n",
+    "    결과는 OUTPUT_PATH에 별도로 저장 (원본 JSON은 보존).\n",
+    "\n",
+    "    Args:\n",
+    "        KEYPOINTS_DIR (Path): 원본 keypoints JSON 폴더 경로\n",
+    "        OUTPUT_PATH (Path): 수정된 JSON 저장 경로 (보통 4_INTERP_DATA)\n",
+    "        target_kps (int | list[int]): 고정할 keypoint 인덱스(들)\n",
+    "        ref_frame (int): 기준 프레임 번호 (예: 266)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 입력 타입 보정\n",
+    "    # -------------------------------------------------------\n",
+    "    if isinstance(target_kps, int):\n",
+    "        target_kps = [target_kps]\n",
+    "\n",
+    "    OUTPUT_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 기준 프레임 로드\n",
+    "    # -------------------------------------------------------\n",
+    "    ref_path = KEYPOINTS_DIR / f\"{ref_frame:06d}.json\"\n",
+    "    if not ref_path.exists():\n",
+    "        raise FileNotFoundError(f\"❌ 기준 프레임 {ref_frame:06d}.json 없음\")\n",
+    "\n",
+    "    with open(ref_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        ref_data = json.load(f)\n",
+    "\n",
+    "    ref_kps = np.array(ref_data[\"instance_info\"][0][\"keypoints\"])\n",
+    "    freeze_coords = {kp: ref_kps[kp] for kp in target_kps}\n",
+    "\n",
+    "    print(f\"\\n[INFO] 기준 프레임 {ref_frame}의 고정 대상 keypoints 좌표:\")\n",
+    "    for kp, coord in freeze_coords.items():\n",
+    "        print(f\"  - KP {kp}: {coord}\")\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 전체 프레임 복사 후 수정\n",
+    "    # -------------------------------------------------------\n",
+    "    json_files = sorted(KEYPOINTS_DIR.glob(\"*.json\"))\n",
+    "    print(f\"[INFO] 총 {len(json_files)}개 프레임 처리 중...\")\n",
+    "\n",
+    "    for json_path in tqdm(json_files, desc=f\"Freezing keypoints {target_kps}\"):\n",
+    "        # 원본 JSON 로드\n",
+    "        with open(json_path, \"r\", encoding=\"utf-8\") as fp:\n",
+    "            data = json.load(fp)\n",
+    "\n",
+    "        kps = np.array(data[\"instance_info\"][0][\"keypoints\"])\n",
+    "\n",
+    "        # 지정된 keypoints 좌표 고정\n",
+    "        for kp, coord in freeze_coords.items():\n",
+    "            kps[kp] = coord\n",
+    "\n",
+    "        data[\"instance_info\"][0][\"keypoints\"] = kps.tolist()\n",
+    "\n",
+    "        # 출력 경로 (4_INTERP_DATA 하위 동일 구조)\n",
+    "        out_file = OUTPUT_PATH / json_path.name\n",
+    "        with open(out_file, \"w\", encoding=\"utf-8\") as fp:\n",
+    "            json.dump(data, fp, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    print(f\"\\n✅ keypoints {target_kps} 전체 프레임 고정 완료 (기준 frame {ref_frame})\")\n",
+    "    print(f\"   → 출력 경로: {OUTPUT_PATH}\")\n"
    ]
   },
   {
@@ -109,6 +341,14 @@
    "source": [
     "## IQR 시각화 함수"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e525d44c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -124,6 +364,92 @@
    "metadata": {},
    "source": [
     "## smoothing 시각화 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fa4bf5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "from scipy.ndimage import gaussian_filter1d\n",
+    "from pathlib import Path\n",
+    "import shutil\n",
+    "\n",
+    "def smooth_keypoints(KEYPOINTS_DIR: Path, INTERP_DIR: Path, target_kps, sigma: float = 2.0):\n",
+    "    \"\"\"\n",
+    "    지정한 다수의 keypoint(target_kps)의 X,Y 좌표를 Gaussian smoothing 후 \n",
+    "    INTERP_DIR 경로에 JSON 복사 및 수정 저장.\n",
+    "\n",
+    "    Args:\n",
+    "        KEYPOINTS_DIR (Path): 원본 keypoints JSON 폴더 경로\n",
+    "        INTERP_DIR (Path): 보간/스무딩 JSON 저장 폴더 경로\n",
+    "        target_kps (int | list[int]): smoothing 대상 keypoint 인덱스 또는 리스트\n",
+    "        sigma (float): Gaussian smoothing sigma 값 (기본=2.0)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 입력값 정리\n",
+    "    # -------------------------------------------------------\n",
+    "    if isinstance(target_kps, int):\n",
+    "        target_kps = [target_kps]\n",
+    "\n",
+    "    json_files = sorted(KEYPOINTS_DIR.glob(\"*.json\"))\n",
+    "    if not json_files:\n",
+    "        raise FileNotFoundError(f\"❌ JSON 파일이 존재하지 않습니다: {KEYPOINTS_DIR}\")\n",
+    "\n",
+    "    INTERP_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    print(f\"[INFO] 총 {len(json_files)}개 프레임, keypoints {target_kps} smoothing 중...\")\n",
+    "    print(f\"[INFO] 원본 폴더: {KEYPOINTS_DIR}\")\n",
+    "    print(f\"[INFO] 출력 폴더: {INTERP_DIR}\")\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # keypoint별 smoothing\n",
+    "    # -------------------------------------------------------\n",
+    "    for kp in target_kps:\n",
+    "        print(f\"\\n[INFO] ▶ Keypoint {kp} smoothing 시작 (σ={sigma})\")\n",
+    "\n",
+    "        # 좌표 추출\n",
+    "        x_values, y_values = [], []\n",
+    "        for jfile in json_files:\n",
+    "            with open(jfile, \"r\", encoding=\"utf-8\") as f:\n",
+    "                data = json.load(f)\n",
+    "            kps = np.array(data[\"instance_info\"][0][\"keypoints\"])\n",
+    "            x_values.append(kps[kp, 0])\n",
+    "            y_values.append(kps[kp, 1])\n",
+    "\n",
+    "        x_values = np.array(x_values)\n",
+    "        y_values = np.array(y_values)\n",
+    "\n",
+    "        # Gaussian smoothing\n",
+    "        x_smooth = gaussian_filter1d(x_values, sigma=sigma)\n",
+    "        y_smooth = gaussian_filter1d(y_values, sigma=sigma)\n",
+    "        print(f\"[INFO] Gaussian smoothing 완료 (σ={sigma}) — KP {kp}\")\n",
+    "\n",
+    "        # JSON 수정 및 INTERP_DIR에 저장\n",
+    "        for i, jfile in enumerate(tqdm(json_files, desc=f\"Smoothing KP {kp}\")):\n",
+    "            # 원본 JSON 복사 후 수정\n",
+    "            dest_path = INTERP_DIR / jfile.name\n",
+    "            shutil.copy(jfile, dest_path)\n",
+    "\n",
+    "            with open(dest_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "                data = json.load(f)\n",
+    "\n",
+    "            kps = np.array(data[\"instance_info\"][0][\"keypoints\"])\n",
+    "            kps[kp, 0] = x_smooth[i]\n",
+    "            kps[kp, 1] = y_smooth[i]\n",
+    "            data[\"instance_info\"][0][\"keypoints\"] = kps.tolist()\n",
+    "\n",
+    "            with open(dest_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "                json.dump(data, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "        print(f\"✅ Keypoint {kp} smoothing 완료 (σ={sigma})\")\n",
+    "        "
    ]
   },
   {
